[package]
name = "spire_tween"
version = "0.5.0"
authors = ["Houtamelo"]
edition = "2024"
resolver = "3"
description = "A Slimy tweener library for Godot(4.4+), inspired on the design of DoTween(3rd party package for Unity)"
license = "MIT"
repository = "https://github.com/Houtamelo/spire_tween"
categories = ["game-development", "api-bindings"]
keywords = ["godot", "tweening", "animation", "gdextension", "spire"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { version = "0.3.0", features = ["experimental-threads"] }
keyframe = "1.1.1"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"

[patch.crates-io]
godot = { git = "https://github.com/godot-rust/gdext.git" }
